--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dotenv": "8.2.0",
     "eslint-config-trybe-backend": "1.0.3",
     "express": "4.17.1",
+    "joi": "^18.0.2",
+    "jsonwebtoken": "^9.0.3",
     "mysql2": "2.1.0",
     "sequelize": "6.3.4",
     "shelljs": "0.8.4"
@@ -29,5 +31,8 @@
     "nodemon": "^3.1.11",
     "sequelize-cli": "6.2.0",
     "supertest": "4.0.2"
+  },
+   "jest": {
+    "setupFiles": ["<rootDir>/jest.setup.js"]
   }
 }
